<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="taskAdapter"
            type="com.televantou.everylifetasks.ui.main.TaskAdapter" />

        <variable
            name="menuArrayAdapter"
            type="com.televantou.everylifetasks.ui.main.MenuArrayAdapter" />

        <variable
            name="viewModel"
            type="com.televantou.everylifetasks.ui.main.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.">
        <!--  BEGIN LOADING SCREEN  -->

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:theme="@style/progressBar"
            android:visibility="@{viewModel.loading  ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/rclTasks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@{viewModel.error}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_circular" />

        <TextView
            android:id="@+id/textViewEmptyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/no_items_to_show"
            android:visibility="@{viewModel.emptyList? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_circular" />
        <!-- END LOADING SCREEN -->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rclTasks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{viewModel.loading || viewModel.error.length()>0 || viewModel.emptyList? View.GONE : View.VISIBLE}"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/rclBottomMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setAdapter="@{taskAdapter}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rclBottomMenu"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/rclTasks"
            app:setAdapter="@{menuArrayAdapter}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>