<resources>
    <string name="app_name">EveryLifeTasks</string>
    <string name="no_items_to_show">No items to show</string>
    <string name="could_not_connect">Could not connect to internet</string>
    <string name="tasks">Tasks</string>
</resources>